--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="top-navbar">
         <div class="navbar-left" style="display: flex; align-items: center; gap: 16px;">
-            <a href="home.html" class="back-home-btn" title="Back to Home" style="position: static; width: 36px; height: 36px; background: none; box-shadow: none;">
+            <a href="index.html" class="back-home-btn" title="Back to Home" style="position: static; width: 36px; height: 36px; background: none; box-shadow: none;">
                 <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M21 12L15 18L21 24" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
@@ -75,4 +75,5 @@
         </div>
     </section>
 </body>
+
 </html>
