--- a/projek.html
+++ b/projek.html
@@ -43,7 +43,7 @@
 <body>
     <nav class="top-navbar">
         <div class="navbar-left" style="display: flex; align-items: center; gap: 16px;">
-            <a href="home.html" class="back-btn" style="display: flex; align-items: center; text-decoration: none; color: inherit; padding: 4px 10px; border-radius: 50px; border: none; background: none; font-size: 1.2em; cursor: pointer; transition: background 0.2s;">
+            <a href="index.html" class="back-btn" style="display: flex; align-items: center; text-decoration: none; color: inherit; padding: 4px 10px; border-radius: 50px; border: none; background: none; font-size: 1.2em; cursor: pointer; transition: background 0.2s;">
                 <span style="font-size: 1.5em; margin-right: 6px;">&#8592;</span> <!-- Left arrow -->
             </a>
             Portofolio ~
@@ -98,4 +98,5 @@
     });
     </script>
 </body>
+
 </html>
